new file:   images/FreeRTOS_arch.png 	new file:   images/STM32_schematic.png 	new file:   images/Task_interaction.png 	modified:   main.pdf 	modified:   main.tex 	modified:   main.toc

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,9 @@
 \usepackage[nottoc,numbib]{tocbibind} % Пакет tocbibind добавляет в оглавление пункты, которые обычно туда не попадают: библиографию, список иллюстраций, список таблиц и т. д.
 
 
+\sloppy
+\emergencystretch=1em
+
 \begin{document}
 
 \input{titlepage_example.tex}
@@ -417,17 +420,6 @@ Bluetooth Mesh не использует центрального координ
     \label{table:compare_wireless_protocols}
 \end{table}
 
-\subsubsection{Доступность платформ для разработки}
-
-В среде Arduino IDE наиболее зрелая поддержка реализована для плат серии ESP32 DevKitC на базе модуля ESP-WROOM-32: доступен API для построения Wi-Fi Mesh,
-однако готовых примеров в составе «arduino-esp32» нет, а поддержка BLE Mesh на уровне Arduino отсутствует, требуя прямой работы с ESP-IDF. Платы ESP32-C6 и
-ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/Thread), но в текущих версиях core для Arduino-ESP32 их поддержка нестабильна и не включает
-демонстрационных примеров; для полноценной работы требуется использовать свежие ветки «arduino-esp32» или компилировать примеры из ESP-IDF.
-
-Со стороны STMicroelectronics наиболее популярна плата P-NUCLEO-WB55RG (Nucleo-WB55RG) на базе STM32WB55, где через STM32duino core и библиотеку STM32duinoBLE
-доступны примеры по BLE, но для Thread и Zigbee необходимо обращаться к STM32CubeWB SDK и демонстрациям на сайте производителя. Аналогично, плата STM32W-RFCKIT
-поддерживается лишь в рамках STM32CubeWB и не имеет официальных Arduino-библиотек или готовых sketch’ей.
-
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -488,24 +480,149 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 Использование CSMA хоть и приводит к чуть большему потреблению стационарных устройств, но позволяет отказаться от генератора синхронизирующих фреймов, которым обычно выступает
 координатор сети. В таком случае выход из строя координатора либо его отключение ограничиться только невозможностью удалять добавлять и переконфигурировать сеть но не скажется на работоспособности сети
 
-%Централизованные СДА, имеющие ЦУД, обладая несомненными преимуществами, такими как простота настройки и реализации,
-%также имеют ряд недостатков: низкая скорость реакции, невысокая надежность и безопасность, сильно зависящая от ЦУД
-%и облачной инфраструктуры. Для интеграции устройств, находящихся в разных сетях, используется централизованная
-%координация через единое облако. На рис.~\ref{fig:GlobalSystemDesing} представлена архитектура предлагаемой гибридной системы, подразумевающей
-%прямое взаимодействие устройств в СДА.
-
-
-
-%Для взаимодействия физически разнесенных устройств предлагается использование
-%шлюзов-ретрансляторов, которые выполняют функцию объединения зон в единую сеть,
-%распределяют по устройствам обновленную конфигурацию сети, а также предоставляют функцию управления умным домом извне.
-%Предложенная система уменьшает количество промежуточных узлов между устройством, порождающим событие, и устройством
-%исполнителем (при нахождении устройств в одной зоне до нуля).
 Данное решение кроме повышения надежности системы также уменьшает задержку передачи информации, повышает отказоустойчивость системы и ее безопасность \cite{SecuritySmartHome, SecuritySmartHome2}.
 
 
-\section{Глава 3. Архитектура конечных устройств.}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                              ГЛАВА III. Конечные устройства.                                                                   %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 
+\section{Глава 3. Конечные устройства.}
+
+\subsection{Аппаратная реализация конечных устройств.}
+
+\subsubsection{Обоснование выбора аппаратной платформы}
+
+В качестве аппаратной платформы конечных устройств системы домашней автоматизации выбран микроконтроллер STM32F411 семейства STM32 (STMicroelectronics). Данное семейство отличается
+высоким уровнем интеграции, широкой линейкой моделей, а также возможностью масштабирования — от энергоэффективных решений до высокопроизводительных микроконтроллеров. В частности,
+совместимость пинов питания и некоторых интерфейсов (UART, SPI, I²C, ADC, и др.) между различными линейками (STM32F0, F1, F3, F4 и др.) позволяет замену микросхем без необходимости
+внесения значительных изменений в схемотехническое решение.
+
+Выбор серии STM32F4 обусловлен необходимостью выполнения интерпретируемого кода на конечных устройствах. В частности, в рамках данного проекта планировался запуск встроенного
+JavaScript-интерпретатора, который требует наличия значительного объёма оперативной памяти (не менее 64 КБ ОЗУ) и производительного ядра. STM32F411 с ядром Cortex-M4 и 128/256 КБ
+ОЗУ полностью удовлетворяет данным требованиям, при этом оставаясь относительно доступным и распространённым решением.
+
+Дополнительным фактором при выборе аппаратной платформы послужила возможность разработки в среде Arduino IDE. В отличие от STM32WB, обеспечивающего полноценную поддержку беспроводных
+протоколов Zigbee и Thread, STM32F411 может быть полноценно использован в Arduino-среде через STM32duino core. Это особенно важно в условиях ограничения времени и необходимости
+быстрой интеграции: в рамках проекта приоритетом была высокая скорость разработки и наличие широкого сообщества, предоставляющего библиотеки, примеры и поддержку. Разработка через
+STM32CubeIDE или использование HAL/LL библиотек требует существенно более высокого порога вхождения, что снижает доступность технологии для разработчиков с опытом, ограниченным
+Arduino-экосистемой.
+
+\subsubsection{Обоснование выбора радиомодуля}
+
+В качестве радиомодуля выбран микросхема SI4432 производства Silicon Labs. Данный модуль обеспечивает надёжную и энергоэффективную радиосвязь в диапазоне 433/868/915 МГц с высокой
+чувствительностью приёмника (до –121 дБм) и выходной мощностью до +20 дБм, что позволяет обеспечить устойчивую связь на больших расстояниях и в условиях радиопомех. Немаловажным
+преимуществом является буфера сообщений объемомо 64Б, что является самым большим показателем, среди радиомодулей-претендентов. Также при выборе ключевым аспектом выбора радиомодуля
+была его интеграция в универсальную библиотеку беспроводной связи для встраиваемых устройств RadioLib.
+
+Хотя Zigbee (в частности, Zigbee Pro) признан промышленным стандартом для реализации распределённых систем автоматизации, включая системы «умного дома», его внедрение в рамках Arduino
+IDE представляется затруднительным. В частности, несмотря на наличие Zigbee-совместимых микроконтроллеров семейства STM32WB, полноценная работа с данным протоколом требует
+использования STM32CubeWB~SDK и разработки в STM32CubeIDE, что влечёт за собой необходимость освоения принципиально иной среды и подхода разработки. Поддержка Zigbee в
+рамках STM32duino отсутствует, а готовых библиотек для Arduino IDE расширяющих функционал STM32duino нет.
+
+Использование радиомодуля SI4432 позволяет реализовать собственный стек передачи данных, гибко настраиваемый под конкретные требования проекта. Несмотря на необходимость разработки
+протокольного уровня связи, данный подход обеспечивает более высокую скорость разработки, по сравнению с использованием STM32CubeWB~SDK.
+
+\subsubsection{Проектирование конечного устойства.}
+
+В среде проектирования электронных схем EasyEDA была разработана принципиальная схема устройства, представленная на рисунке~\ref{fig:STM32_schematic}. В той же среде выполнена
+трассировка печатной платы. Изготовление платы осуществлено по лазерно-утюжной технологии (ЛУТ), обеспечивающей высокую точность и преемлемое качество получаемого рисунка проводников.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/STM32_schematic.png}
+    \caption{Принципиальная схема устройства}
+    \label{fig:STM32_schematic}
+\end{figure}
+
+После изготовления платы проведён монтаж электронных компонентов, включающий установку и пайку всех элементов в соответствии с разработанной схемой. Готовая плата прошла тестирование
+на наличие коротких замыканий и обрывов дорожек с целью обеспечения её функциональной надёжности.
+
+Программирование и отладка микроконтроллера на плате осуществлялись с использованием устройства WeAct Mini Debugger -- компактного программатора -- отладчика, поддерживающего протокол
+StLink 2.1 для программирования микроконтроллеров STM32 и подключающегося к компьютеру через USB--порт.
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                               Программная реализация конечных устройств                                                                   %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Программное обеспечение конечных устройств.}
+
+Для обеспечения минимальных задержек и надёжного выполнения разнообразных задач на однокристальном контроллере STM32F411 применяется операционная система реального времени FreeRTOS,
+интегрированная через STM32Duino. Архитектура FreeRTOS основана на ядре планировщика, которое управляет созданными задачами (tasks), их приоритетами и выделением ресурсов процессорного
+времени и оперативной памяти (см. рисунок~\ref{fig:simple_arch_of_FreeRTOS}). Каждая задача располагает собственным стеком и может быть настроена на срабатывание по программируемому
+таймеру, что позволяет гарантировать её запуск через заданные интервалы времени. Планировщик FreeRTOS реализует приоритетный вытесняющий (preemptive) режим: если текущая задача
+превысила выделённый ей квант или в систему добавилась задача более высокого приоритета, управление незамедлительно передаётся вновь приоритетной задаче. Такая модель обеспечивает
+детерминированное поведение и высокую отзывчивость конечного устройства.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/FreeRTOS_arch.png}
+    \caption{Упрощенная архитектура FreeRTOS \cite{IMG_RTOS_architectures}}
+    \label{fig:simple_arch_of_FreeRTOS}
+\end{figure}
+
+Для повышения отказоустойчивости и сокращения времени обработки входящих сообщений отправка и приём сообщений разбиты на множество мелких задач, каждая из которых выполняет строго
+определённый фрагмент обработки. Например, непосредственно чтение очередного пакета из буфера радиомодуля SI4432 обладает самым высоким приоритетом, затем следует проверка целостности
+данных и, лишь после этого, формирование отладочных сообщений на последовательный порт — см. рисунок \ref{fig:STM32_architecture_of_messanger}. Подобное разделение предотвращает
+«залипание» конвейера обработки и минимизирует вероятность образования битых пакетов.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/Task_interaction.png}
+    \caption{Упрощенное взаимодействие задач в библиотеке Messanger}
+    \label{fig:STM32_architecture_of_messanger}
+\end{figure}
+
+Программная структура конечного устройства выстроена по двухуровневой схеме (рис. \ref{fig:end_device}). Низкоуровневая прошивка, написанная на C/C++ с использованием STM32Duino и FreeRTOS, предоставляет API для всех аппаратно-зависимых операций: настройка периферии, обмен данными с радиомодулем, синхронизация задач и работа с очередями сообщений. Высокоуровневая прошивка реализована на языке JavaScript и исполняется на встроенном интерпретаторе (например, JerryScript). Такая двухслойная архитектура позволяет оперативно изменять логику работы устройства без перепрошивки микроконтроллера: достаточно обновить JavaScript-модули через удалённую конфигурацию. Пакетный режим передачи сообщений с гибкими настройками параметров радиомодуля SI4432 доказал свою эффективность при прототипировании, сочетая низкое потребление энергии с высокой скоростью и надёжностью связи.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/Fig05.png}
+    \caption{Реализация конечного устройства}
+    \label{fig:end_device}
+\end{figure}
+
+\subsection{Взаимодействие устройств и топология системы}
+
+Для передачи сообщений между конечными устройствами описываемая СДА использует радиомодули, взаимодействующие между собой посредством широковещательной передачи (broadcast), при которой каждое сообщение может быть принято любым узлом в зоне радиодоступа. Сигнал принимают все модули, но обрабатывают его лишь те, чей фильтр (например, по адресу или типу пакета) его пропускает. С точки зрения классических сетевых определений, говорить о чёткой топологии здесь затруднительно: физического соединения между узлами нет, а сама передача осуществляется через общую радиосреду. Такая структура ближе всего к логической топологии типа "шина" (bus), поскольку сигнал распространяется по общему каналу связи и доступен всем участникам сети. Однако корректнее описывать такую организацию как сеть с разделяемой средой доступа (shared medium) и логикой point-to-multipoint, где один узел может потенциально вещать всем, но приём зависит от контекста.
+
+\subsection{Взаимодействие устройств}
+Для связи устройств в рамках сети предлагается использование протокола для обмена сообщений по шаблону «Объект -- Наблюдатель» (Subject -- Observer). В котором каждое устройство сверяет полученное сообщение со списком реакций на оповещения, и, если оповещение есть в списке, запускает выполнение команды. Наглядно демонстацию отличий Subject -- Observer от Pub -- Sub можно увидеть на рис.~\ref{fig:Observer_vs_pub_sub}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{images/Fig08.png}
+    \caption{Отличие observer от Publisher-Subscriber \cite{IMG_observer_vs_pub_sub}}
+    \label{fig:Observer_vs_pub_sub}
+\end{figure}
+
+Каждое сообщение проверяется в соответствии со списком шаблонов (сообщение -- конфигурация, сообщение -- событие) после проверки хеш-суммы и аутентификации; и в случае соответствия с
+шаблоном обновляет конфигурацию устройства (если получено сообщение -- конфигурация) или начинает выполнять сценарий (если сообщение -- событие).
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                             ГЛАВА IV. Распределённый отказаустойчивый кластер.                                                            %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+
+\section{Глава 4. Распределённый отказаустойчивый кластер.}
 
 
 \begin{figure}[H]
@@ -521,33 +638,7 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 K, перестанут обрабатываться межзонные события, связанные с зоной К. При этом функционал внутри и вне зоны
 К не изменится.
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/Fig05.png}
-    \caption{Реализация конечного устройства}
-    \label{fig:end_device}
-\end{figure}
 
-Програмная часть каждого конечного устройства представляет из себя двухуровневую систему, как показано на рис.~\ref{fig:end_device}:
-низкоуровневую прошивку, написанную с использованем FreeRTOS и предоставляющую API для высокоуровневой части для
-управления, и высокоуровневую прошивку, написанную на языке JavaScript и запускающуюся посредством интерпретатора на
-конечном устройстве. JS часть может быть легко изменена извне через настройку системы. Такой подход
-позволяет вынести логику взаимодействия из ЦУД в конечные устройства и передавать данные напрямую и сразу локально
-исполнять сценарии. Во время прототипирования были использованы различные протоколы передачи информации, в итоге
-были использованы наиболее гибкие в настройке радиомодули SI4432.
-
-\subsection{Выбранная топология системы}
-Для передачи сообщений между конечными устройствами описываемая СДА использует радиомодули, взаимодействующие между собой посредством широковещательной передачи (broadcast), при которой каждое сообщение может быть принято любым узлом в зоне радиодоступа. Сигнал принимают все модули, но обрабатывают его лишь те, чей фильтр (например, по адресу или типу пакета) его пропускает. С точки зрения классических сетевых определений, говорить о чёткой топологии здесь затруднительно: физического соединения между узлами нет, а сама передача осуществляется через общую радиосреду. Такая структура ближе всего к логической топологии типа "шина" (bus), поскольку сигнал распространяется по общему каналу связи и доступен всем участникам сети. Однако корректнее описывать такую организацию как сеть с разделяемой средой доступа (shared medium) и логикой point-to-multipoint, где один узел может потенциально вещать всем, но приём зависит от контекста.
-
-\subsection{Взаимодействие устройств}
-Для связи устройств в рамках сети предлагается использование протокола для обмена сообщений по шаблону «наблюдатель» (Observer). В котором каждое устройство сверяет полученное сообщение со списком реакций на оповещения, и, если оповещение есть в списке, запускает выполнение команды. Наглядно демонстацию отличий Observer от Pub-Sub можно увидеть на рис.~\ref{fig:Observer_vs_pub_sub}.
-
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.6\textwidth]{images/Fig08.png}
-    \caption{Отличие observer от Publisher-Subscriber \cite{IMG_observer_vs_pub_sub}}
-    \label{fig:Observer_vs_pub_sub}
-\end{figure}
 
 \subsection{Добавление устройств и настройка сценариев}
 
@@ -685,6 +776,8 @@ K, перестанут обрабатываться межзонные собы
 \bibitem{NXP_JNUG3101} Zigbee Pro Stack User Guide (JN-UG-3101), NXP Semiconductors [Электронный ресурс]: \url{URL: https://www.nxp.com/docs/en/user-guide/JN-UG-3101.pdf} (дата обращения: 20.05.2025).
 
 \bibitem{CSMA_article} Simon S. Lam, A Carrier Sense Multiple Access Protocol for Local Networks // Computer Networks. 1976. Vol.~4 Issue~1 P.~21--32,
+
+\bibitem{IMG_RTOS_architectures} Qutqut M., Al-Sakran A., Almasalha F., Hassanein H. // Comprehensive Survey of the IoT Open Source OSs. IET Wireless Sensor Systems. 2018.
 
 %images
 \bibitem{IMG_protocol_compare} Сравнительный анализ стандартов связи для сетей IoT [Электронный ресурс]: \url{URL: https://habr.com/ru/companies/msw/articles/720518/} (дата обращения: 11.05.2025).
