modified:   main.pdf 	new file:   main.synctex(busy)     modified:   main.tex 	modified:   main.toc

--- a/main.tex
+++ b/main.tex
@@ -42,11 +42,21 @@
 
 \section*{Аннотация}
 
-С увеличением количества устройств интернет вещей (ИВ) в системах домашней автоматизации (СДА) остро встает вопрос топологий сетей, в которых находятся эти устройства, а также способах хранения и передачи данных между устройствами. Многим системам, использующим централизованный подход в хранении и обработке информации, свойственна существенная потеря функциональности при выходе из строя центрального узла. В ходе исследования были изучены принципы, методологии и архитектуры, применимые к программно-аппаратным комплексам для построения СДА и позволяющие повысить уровень безопасности данных, отказоустойчивость и увеличить скорость передачи информации в рамках системы за счет использования распределенного подхода к хранению и обработке информации, разработан прототип распределенной СДА. Результаты проведенного исследования и предложенная в нем архитектурная модель могут быть использованы не только в системах умных домов, но и в умных городах и на предприятиях.
+С увеличением количества устройств интернет вещей (ИВ) в системах домашней автоматизации (СДА) актуализируется вопрос топологий сетей, в которых находятся эти устройства, вопрос 
+способов хранения и передачи данных между устройствами. Многим системам, использующим централизованный подход в хранении и обработке информации, свойственна существенная потеря
+функциональности при выходе из строя центрального узла. В ходе исследования были изучены принципы, методологии и архитектуры, применимые к программно-аппаратным комплексам для
+построения СДА и позволяющие повысить уровень безопасности данных, отказоустойчивость, а также увеличить скорость передачи информации в рамках системы за счет использования
+распределенного подхода к хранению и обработке информации, разработан прототип распределенной СДА. Результаты проведенного исследования и предложенная в нем архитектурная модель
+могут быть использованы не только в системах умных домов, но и в умных городах и на предприятиях.
 
 \section*{Abstract}
 
-With the increasing number of Internet of Things (IoT) devices in home automation systems (HAS), the topologies of the networks that house these devices, as well as how data is stored and transferred between devices, are becoming an issue. Many systems that use a centralized approach in storing and processing information are characterized by a significant loss of functionality when a central node fails. In the course of the research the principles, methodologies and architectures applicable to hardware-software complexes for the construction of ADS were studied, which allow to increase the level of data security, fault tolerance and increase the speed of information transfer within the system due to the use of distributed approach to information storage and processing, and a prototype of distributed ADS was developed. The results of the conducted research and the architectural model proposed in it can be used not only in smart home systems, but also in smart cities and enterprises.
+With the increasing number of Internet of Things (IoT) devices in home automation systems (HAS), the topologies of the networks that house these devices, as well as how data is stored
+and transferred between devices, are becoming an issue. Many systems that use a centralized approach in storing and processing information are characterized by a significant loss of
+functionality when a central node fails. In the course of the research the principles, methodologies and architectures applicable to hardware-software complexes for the construction
+of ADS were studied, which allow to increase the level of data security, fault tolerance and increase the speed of information transfer within the system due to the use of distributed
+approach to information storage and processing, and a prototype of distributed ADS was developed. The results of the conducted research and the architectural model proposed in it can
+be used not only in smart home systems, but also in smart cities and enterprises.
 
 \newpage
 
@@ -73,8 +83,11 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 Актуальность и практический аспект анализа систем и выбора оптимальной для построения системы домашней автоматизации:
 
 \begin{enumerate}
-    \item	Количество устройств с возможностью интеграции в систему умного дома среди потребителей быстро возрастает год к году. Особенности построения актуальных систем накладывает ограничения на масштабируемость системы, ее надежность и безопасность.
-    \item	В системах домашней автоматизации с появлением новых типов устройств и попытки их интеграции возникают проблемы, связанные со скоростью реакции на события и с отсутствием приоритезации сообщений.
+    \item	Количество устройств с возможностью интеграции в систему умного дома среди потребителей быстро возрастает год к году. Особенности построения актуальных систем накладывают
+    ограничения на масштабируемость системы, ее надежность и безопасность.
+
+    \item	В системах домашней автоматизации с появлением новых типов устройств возникают проблемы интеграции, связанные со скоростью реакции на события и с отсутствием
+    приоритезации сообщений.
 \end{enumerate}
 
 \subsection{Объект исследования}
@@ -92,7 +105,8 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \subsection{Постановка задачи}
 
 
-В рамках данной работы ставится цель провести комплексное исследование существующих СДА на рынке, проанализировать применяемые в них протоколы и выявить основные недостатки. На основании этого выбрать оптимальный протокол и разработать прототип системы, отвечающий сформулированным требованиям и решающий обозначенный список проблем.
+В рамках данной работы ставится цель провести комплексное исследование существующих СДА на рынке, проанализировать применяемые в них протоколы и выявить основные недостатки. На
+основании этого выбрать оптимальный протокол и разработать прототип системы, отвечающий сформулированным требованиям и решающий обозначенный список проблем.
 
 Для достижения этой цели были сформулированы начальные условия (требования):
 
@@ -104,11 +118,21 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 
 \paragraph{Практическая значимость предлагаемого подхода:}
 \begin{itemize}
-    \item Уменьшение задержек, расширение сфер применения: в предлагаемой системе уменьшается количество узлов между устройством-инициатором и устройством-актуатором (при нахождении в одной сети - до нуля), за счет чего увеличивается скорость выполнения команд и повышается общая отзывчивость системы, что расширяет сферы применения устройств ИВ для построения СДА, ранее нефункциональных ввиду относительно больших задержек.
-    \item Повышение комфорта использования: данные о состоянии устройств, как и статистика, собираемая устройствами, хранится и обрабатывается на самих устройствах, что позволяет обеспечить короткое время восстановления работы после внештатных ситуаций (например, отключения питания) без длительной синхронизации.
-    \item Упрощение настройки системы: благодаря использованию планировщика, автоматически распределяющего сценарии по устройствам, нет необходимости в ручной конфигурации каждого узла.
-    \item Повышение отказоустойчивости: отказ сценария в одной локации возможен лишь при неисправности одного из двух устройств (инициатора и актуатора) и не зависит от иных устройств в сети. Объединение локаций, а также дистанционный мониторинг и управление системой осуществляется посредством распределенной системы шлюзов-ретрансляторов, что избавляет от единой точки отказа системы (точки входа).
-    \item Повышение безопасности: распределенный подход для хранения сценариев и управления устройствами минимизирует получение злоумышленниками доступа ко всем устройствам. Система шлюзов-ретрансляторов, использующих VPN-соединение избавляет от единой точки отказа системы (точки входа).
+    \item Уменьшение задержек, расширение сфер применения: в предлагаемой системе уменьшается количество узлов между устройством-инициатором и устройством-актуатором (при нахождении в
+    одной сети--до нуля), за счет чего увеличивается скорость выполнения команд и повышается общая отзывчивость системы, что расширяет сферы применения устройств ИВ для построения
+    СДА, ранее нефункциональных ввиду относительно больших задержек.
+
+    \item Повышение комфорта использования: данные о состоянии устройств, как и статистика, собираемая устройствами, хранится и обрабатывается на самих устройствах, что позволяет
+    обеспечить быстрое восстановление состояния системы после внештатных ситуаций (например, отключения питания) без длительной синхронизации.
+
+    \item Упрощение настройки системы: использование планировщика, автоматически распределяющего сценарии по устройствам, не требует в ручной конфигурации каждого узла.
+    
+    \item Повышение отказоустойчивости: отказ сценария в одной локации возможен лишь при неисправности одного из двух устройств (инициатора и актуатора) и не зависит от иных устройств
+    в сети. Объединение локаций, а также дистанционный мониторинг и управление системой осуществляется посредством распределенной системы шлюзов-ретрансляторов, что избавляет от
+    единой точки отказа системы (точки входа).
+    
+    \item Повышение безопасности: распределенный подход для хранения сценариев и управления устройствами минимизирует получение злоумышленниками доступа ко всем устройствам. Система
+    шлюзов-ретрансляторов избавляет от единой точки отказа системы (точки входа).
 
 \end{itemize}
 
@@ -143,17 +167,18 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 
 \subsubsection{Топология точка-точка}
 Самый простой вариант организации сети из двух устройств. Как правило, узлы этой сети являются равноправными, то есть сеть одноранговая.
-Эта топология характерна для Bluetooth, ANT, RFID, RuBee, PDC, WI-FI, Insteon, UWB, ZigBee и прочих.
+Эта топология характерна для Bluetooth, BLE, RFID, UWB, Wi-Fi Direct, RuBee, PDC и прочих.
 
-\subsubsection{Топология «Звезда»}
-Эта топология служит основой организации всех современных сетей связи и вычислительных сетей. Данную топологию используют протоколы WI-FI, Insteon, ZigBee, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
+\subsubsection{Топология «звезда»}
+В этой конфигурации все устройства подключаются к центральному узлу (хабу), который управляет коммуникацией между ними.
+Данную топологию используют протоколы WI-FI, Insteon, ZigBee, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
 
 \subsubsection{Ячеистая топология}
-Ячеистая топология — базовая полносвязная топология компьютерных сетей и сетей связи, в которой каждая рабочая станция сети соединяется со всеми другими рабочими станциями этой же сети. Характеризуется высокой отказоустойчивостью, сложностью настройки и избыточным расходом кабеля в проводных сетях. Каждый узел имеет несколько возможных путей соединения с другими узлами, за счет этого такая топология очень устойчива. Так как исчезновение одного из каналов не приводит к потере соединения между двумя компьютерами. Эта топология допускает соединение большого количества узлов и характерна, как правило, для крупных сетей, она строится из полносвязной путем удаления некоторых возможных связей.
-Топология применима для сетей с использованием протоколов UWB, WI-FI, Insteon, ZigBee, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
+Ячеистая топология — базовая полносвязная топология компьютерных сетей и сетей связи, в которой каждая рабочая станция сети соединяется со всеми другими рабочими станциями этой же сети. Характеризуется высокой отказоустойчивостью, сложностью настройки и избыточным расходом кабеля в проводных сетях. Каждый узел имеет несколько возможных путей соединения с другими узлами, за счет этого такая топология очень устойчива, так как исчезновение одного из каналов не приводит к потере соединения между двумя компьютерами. Эта топология допускает соединение большого количества узлов и характерна, как правило, для крупных сетей, она строится из полносвязной путем удаления некоторых возможных связей.
+Топология применима для сетей с использованием протоколов UWB, WI-FI, Insteon, ZigBee, IDEN, CDMAOne, WIMAX, GSM, GPRS, UMTS.
 
 \subsubsection{Топология «кластерное дерево»}
-Топология «Кластерное дерево» образуется в основном в виде комбинаций вышеназванных топологий вычислительных сетей. Основание дерева вычислительной сети располагается в точке (корень), в которой собираются коммуникационные линии информации (ветви дерева).
+Топология «кластерное дерево» образуется в основном в виде комбинаций упомянутых выше топологий. Основание дерева вычислительной сети располагается в точке (корень), в которой собираются коммуникационные линии информации (ветви дерева).
 Вычислительные сети с древовидной структурой строятся там, где невозможно непосредственное применение базовых сетевых структур в чистом виде.
 
 
@@ -166,9 +191,9 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
     \label{fig:cloud_event_processing}
 \end{figure}
 
-Большинство имеющихся на данный момент решений опираются на топологию <<дерево>>, где в качестве корня рассматривается ЦУД или облако, что проиллюстрированно на рис. \ref{fig:cloud_event_processing}. При этом структура может подразумевать наличие единственных ветвей из корня, например <<облако-ЦУД-устройства>> \cite{smart_home_review}. Тенденции 2023-2024 г. по переносу обработки событий в ЦУД, который ранее использовался лишь для маршрутизации сообщений от устройств к облаку, позволили увеличить надежность и уменьшить задержки в системе, но не исключили имеющиеся проблемы полностью.
+Большинство имеющихся на данный момент решений опираются на топологию <<дерево>>, где в качестве корня рассматривается ЦУД или облако, что проиллюстрированно на рис. \ref{fig:cloud_event_processing}. При этом структура может подразумевать наличие единственных ветвей из корня, например <<облако-ЦУД-устройства>> \cite{smart_home_review}. Тенденции 2023 и 2024 годов по переносу обработки событий в ЦУД, который ранее использовался лишь для маршрутизации сообщений от устройств к облаку, позволили увеличить надежность и уменьшить задержки в системе, но не исключили имеющиеся проблемы полностью.
 
-Стоит различать аппаратные ограничения, не позволяющие изменить топологию системы, связанные с особенностью работы протокола, например, топологию Bluetooth, позволяющую организовывать только связи типа точка-точка или точка - множество устройств, и архитектуру системы УД, подразумевающую централизованное выполнение сценария в ЦУД либо облаке.
+Стоит различать аппаратные ограничения, не позволяющие изменить топологию системы, связанные с особенностью работы протокола, например, топологию Bluetooth, позволяющую организовывать только связи типа точка-точка или точка - множество устройств, и архитектуру системы УД, подразумевающую централизованное выполнение сценария в ЦУД либо в облаке.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
